# MetaDeck

./: .editorconfig  .gitignore  .gitmodules  README.md  api_servers.json  crowdin.yaml  local.sh  main.py  package.json  plugin.json  pnpm-lock.yaml  pyproject.toml  rollup.config.js  tsconfig.json  update.sh
.github/: FUNDING.yml
.run/: build-dev.run.xml
backend/: CMakeLists.txt  Dockerfile  build.gradle.kts  entrypoint.sh  gradle.properties  settings.gradle.kts
backend/src/: HashCHD.cpp  HashCHD.h  main.cpp  util.cpp  util.h
backend/src/backendMain/kotlin/: Main.kt
backend/src/frontendMain/kotlin/: Main.kt
python/: entrypoint.sh
src/: Api.ts  App.tsx  AppPatch.tsx  AppStore.ts  Interfaces.ts  MetadataManager.ts  SteamClient.ts  index.tsx
src/py/: Heroic.py  NSL.py  Utils.py  decky.pyi  main.py
src/ts/: App.tsx  AppPatch.tsx  AppStore.ts  Interfaces.ts  Interfaces.tsx  LibraryInitializer.ts  MetaDataModal.tsx  MetaDeckComponent.tsx  MetaDeckState.tsx  MetadataManager.ts  MetadataManager.tsx  Python.ts  RoutePatches.tsx  SteamTypes.d.ts  System.ts  Title.tsx  changeMetadataComponent.tsx  contextMenuPatch.tsx  events.ts  index.tsx  logger.ts  markdown.tsx  metaDeckComponent.tsx  modules.d.ts  retroachievements.ts  settings.ts  shortcuts.ts  styleInjector.ts  translations.ts  types.d.ts  useTranslations.ts  util.ts
src/ts/hooks/: metadataContext.tsx
src/ts/localisation/: cs.json  da.json  de.json  el.json  es-419.json  es.json  fi.json  fr.json  it.json  ja.json  ko.json  nl.json  no.json  pl.json  pt-br.json  pt.json  ro.json  ru.json  sv.json  th.json  (+5 more)
(+33 files in other folders)
